--- a/MapProHack/MapProHack/MapProHack.csproj
+++ b/MapProHack/MapProHack/MapProHack.csproj
@@ -258,8 +258,7 @@
     <Content Include="Views\Manage\VerifyPhoneNumber.cshtml" />
     <Content Include="Views\Shared\Lockout.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
-    <Content Include="Views\Home\clients.cshtml" />
-    <Content Include="Views\Home\couriers.cshtml" />
+    <Content Include="Views\Shared\logLay.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
